--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-NASA_API_KEY = <YOUR_NASA_API_KEY>
+DJANGO_SECRET_KEY=your_secret_key
+DB_NAME=financedb
+DB_USER=postgres
+DB_PASSWORD=postgres
+EMAIL_ENCRYPTION_KEY=your_aes_key
+GMAIL_CLIENT_ID=your_client_id
+GMAIL_CLIENT_SECRET=your_client_secret
